<resources>
    <!-- Main -->
    <string name="app_name">LongHolder</string>
    <string name="tab_title_wallet">Wallet</string>
    <string name="tab_title_analytics">Analytics</string>
    <string name="tab_title_profile">Profile</string>

    <!-- Common errors -->
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_make_sure_device_is_connected">Make sure your device is connected to the internet</string>
    <string name="error_unknown">Internal Server Error, please try again later</string>
    <string name="error_no_user_associated_with_email_exception">No user associated with email</string>
    <string name="error_user_already_exists">User already exists!</string>

    <!-- Common messages -->
    <string name="common_ok">Ok</string>
    <string name="common_your_email">Your e-mail</string>
    <string name="common_password">Password</string>
    <string name="common_name">Name</string>
    <string name="common_surname">Surname</string>
    <string name="common_next">Next</string>
    <string name="common_skip">Skip</string>
    <string name="common_dollar">$</string>
    <string name="common_dollar_value_with_brackets">($%s)</string>
    <string name="common_earned_crypto_with_percent">%1$s (%2$s %%)</string>
    <string name="common_earned_crypto">%1$s</string>
    <string name="common_value_with_percent">%.2f%%</string>
    <string name="common_crypto_price_in_other_currency">1 %1$s = $%2$s</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_update">Update</string>
    <string name="common_percent_sign">%</string>

    <!-- Notification -->
    <string name="push_notification_holding_has_ended">Your holding has ended</string>
    <string name="push_notification_you_earned">You have earned: %.2f</string>

    <!-- Dialog -->
    <string name="dialog_log_out_title">Do you want to Log out?</string>
    <string name="dialog_log_out">Log Out</string>
    <string name="dialog_do_you_want_stop_holding">Do you want to stop holding?</string>
    <string name="dialog_if_you_stop_holding">If you stop your holding now, the coin will be removed from your wallet. </string>

    <!-- Snack -->
    <string name="snack_successfully_added">Active was successfully added</string>

    <!-- Validator messages -->
    <string name="allowed_symbols_for_password">-+_~!@#$%^&amp;*?\\/().:;\"\'[]{}|,abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="validation_email_not_valid">Invalid email address, please try again</string>
    <string name="validation_name_not_valid">Name can\'t be blank</string>
    <string name="validation_surename_not_valid">Surename can\'t be blank</string>
    <string name="validation_password_not_valid">Password may contain minimum 8 characters, 1 capital letter and 1 number.</string>
    <string name="validation_crypto_amount_not_valid">Please enter a value bigger than 1</string>
    <string name="validation_password_match">Both passwords must match</string>
    <string name="validation_value_not_valid">Value not valid</string>
    <string name="validation_same_value">Same amount</string>
    <string name="validation_same_date">Same date</string>

    <!-- Welcome screen -->
    <string name="welcome_registration">Registration</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_title">Invest on time, take profits on time</string>

    <!-- Sign up screen -->
    <string name="sign_up_what_email_password">What is your e-mail and password?</string>
    <string name="sign_up_what_email">What is your e-mail?</string>
    <string name="sign_up_policy">Policy term refers to the period for which your term insurance policy will remain active. This term is determined at the time of purchasing the insurance plan.</string>
    <string name="sign_up_what_name">What is your name?</string>
    <string name="sign_up_create_password">Create a password.</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_create_password_description">Password may contain minimum 8 characters, 1 capital letter and 1 number.</string>

    <!-- Login screen -->
    <string name="login_email_and_password">What is your e-mail and password?</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login">Login</string>

    <!-- Onboarding screen -->
    <string name="onboarding_start">Let’s start!</string>

    <!-- Wallet screen -->
    <string name="wallet_my_actives">My crypto actives</string>
    <string name="wallet_have_not_add_actives">You haven’t add any actives yet.</string>
    <string name="wallet_add_your_actives_now">Add your actives and start managing them now!</string>
    <string name="wallet_add_your_actives">+ Add your actives</string>
    <string name="wallet_on_hold_from">On Hold from %s</string>

    <!-- Analytics -->
    <string name="analytics_title">Analytics</string>
    <string name="analytics_total_info">Total Info</string>
    <string name="analytics_total_on_hold">Total on hold</string>
    <string name="analytics_current_exchange_rate">Сurrent Exchange rate</string>
    <string name="analytics_total_in_currnecy">Total in currency</string>
    <string name="analytics_profit">Profit</string>
    <string name="analytics_raise_fold">Raise/Fold in %</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_item_notifications">Notifications</string>
    <string name="profile_item_language">Language</string>
    <string name="profile_item_theme">Theme</string>
    <string name="profile_item_subscription">Subscription</string>
    <string name="profile_item_log_out">Log out</string>

    <!-- Notifications -->
    <string name="notifications_title">Notifications</string>
    <string name="notifications_empty_notifications_title">You doesn’t have any messages yet</string>

    <!-- Language -->
    <string name="language_title">Language</string>
    <string name="language_en">English</string>
    <string name="language_uk">Ukrainian</string>

    <!-- Theme -->
    <string name="theme_title">Theme</string>
    <string name="theme_light">Light</string>

    <!-- Active -->
    <string name="active_add">Add your Active</string>
    <string name="active_your">Your Active</string>
    <string name="active_update">Update your Active</string>
    <string name="active_select_coin">Select your coin</string>
    <string name="active_your_coin">Your coin</string>
    <string name="active_enter_amount">Enter amount</string>
    <string name="active_enter_wanted_percents">Enter wanted percents</string>
    <string name="active_enter_price_on_start">Enter price on start</string>
    <string name="active_price_on_start">Price on start</string>
    <string name="active_wanted_percents">Wanted percents</string>
    <string name="active_amount">Amount</string>
    <string name="active_date_end_hold">Date of stop of hold</string>
    <string name="active_date_hint">dd/mm/yyyy</string>
    <string name="active_summary">Summary on the day of purchase</string>
    <string name="active_summary_today">Summary today</string>
    <string name="active_profit">Profit if sell now</string>
    <string name="active_leave_comment">Leave your comment</string>
    <string name="active_your_comment">Your comment</string>
    <string name="active_put_on_hold">Put on Hold</string>
    <string name="active_stop_holding">Stop Holding</string>

    <!-- Subscription -->
    <string name="subscription_title">Subscription</string>
    <string name="subscription_cancel_subscription">Cancel subscription</string>

    <!-- Reset password -->
    <string name="reset_password_enter_email">Enter you e-mail. We will send you the link to create a new password.</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_mail_has_been_sent">Activation mail has been sent to\n“%s”</string>

    <!-- Calculator -->
    <string name="calculator_title">Calculator</string>
    <string name="calculator_from_number">from number</string>
    <string name="calculator_result">Result</string>
    <string name="calculator_number">Number</string>
    <string name="calculator_default_result">0</string>
    <string name="calculator_add_percent">add %</string>
    <string name="calculator_subtract_percent">subtract %</string>
</resources>