<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.traday.longholder.presentation.customviews.SimpleToolbar
        android:id="@+id/stLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextAppearance.App.Screen.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:text="@string/language_title" />

    <FrameLayout
        android:id="@+id/flLanguageEnglish"
        style="@style/Widget.App.MenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_3">

        <TextView
            android:id="@+id/tvLanguageEnglish"
            style="@style/TextAppearance.App.MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_en"
            app:drawableEndCompat="@drawable/ic_radio_button_checked" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flLanguageUkrainian"
        style="@style/Widget.App.MenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_3">

        <TextView
            android:id="@+id/tvLanguageUkrainian"
            style="@style/TextAppearance.App.MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_uk"
            app:drawableEndCompat="@drawable/ic_radio_button_checked" />
    </FrameLayout>
</LinearLayout>