<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.traday.longholder.presentation.customviews.SimpleToolbar
        android:id="@+id/stSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarLeftActionDrawable="@drawable/ic_arrow_to_left" />

    <TextView
        style="@style/TextAppearance.App.Screen.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_3"
        android:text="@string/sign_up_what_email" />

    <com.traday.longholder.presentation.customviews.AppTextInputLayout
        android:id="@+id/tilSignUpEmail"
        style="@style/Widget.App.TextInputLayout.FilledBox.Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/sc_spacing_3"
        app:helperText="@string/sign_up_policy">

        <com.traday.longholder.presentation.customviews.ClearFocusTextInputEditText
            android:id="@+id/etSignUpEmail"
            style="@style/Widget.App.TextInputEditText.OutlinedBox.Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" />
    </com.traday.longholder.presentation.customviews.AppTextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.traday.longholder.presentation.customviews.ProgressButton
        android:id="@+id/pbSignUpEmailNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginBottom="@dimen/spacing_5"
        app:progressButtonText="@string/common_next" />
</LinearLayout>