<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpOnboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:background="@color/transparent"
        app:tabBackground="@drawable/ic_tab_indicator_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <com.traday.longholder.presentation.customviews.ProgressButton
        android:id="@+id/pbOnboardingNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        app:progressButtonText="@string/common_next" />

    <com.traday.longholder.presentation.customviews.ProgressButton
        android:id="@+id/pbOnboardingSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:layout_marginBottom="@dimen/spacing_5"
        app:progressButtonText="@string/common_skip"
        app:progressButtonType="emptyWithBorder" />

    <Space
        android:id="@+id/sOnboarding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_7"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:visibility="gone" />

    <com.traday.longholder.presentation.customviews.ProgressButton
        android:id="@+id/pbOnboardingStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:layout_marginBottom="@dimen/spacing_5"
        android:visibility="gone"
        app:pbIcon="@drawable/img_rocket"
        app:progressButtonText="@string/onboarding_start" />

</LinearLayout>