<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/white">

    <com.traday.longholder.presentation.customviews.SimpleToolbar
        android:id="@+id/stSignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarRightActionText="@string/common_skip" />

    <TextView
        style="@style/TextAppearance.App.Screen.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:text="@string/sign_up_what_name" />

    <com.traday.longholder.presentation.customviews.AppTextInputLayout
        android:id="@+id/tilSignUpName"
        style="@style/Widget.App.TextInputLayout.FilledBox.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/sc_spacing_3">

        <com.traday.longholder.presentation.customviews.ClearFocusTextInputEditText
            android:id="@+id/etSignUpName"
            style="@style/Widget.App.TextInputEditText.OutlinedBox.Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:importantForAutofill="no" />
    </com.traday.longholder.presentation.customviews.AppTextInputLayout>

    <com.traday.longholder.presentation.customviews.AppTextInputLayout
        android:id="@+id/tilSignUpSurname"
        style="@style/Widget.App.TextInputLayout.FilledBox.Surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginTop="@dimen/sc_spacing_2">

        <com.traday.longholder.presentation.customviews.ClearFocusTextInputEditText
            android:id="@+id/etSignUpSurname"
            style="@style/Widget.App.TextInputEditText.OutlinedBox.Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" />
    </com.traday.longholder.presentation.customviews.AppTextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.traday.longholder.presentation.customviews.ProgressButton
        android:id="@+id/pbSignUpNameNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2"
        android:layout_marginBottom="@dimen/spacing_5"
        app:progressButtonEnabled="false"
        app:progressButtonText="@string/common_next" />
</LinearLayout>